brain/sources/prod-metadata/objects/Background_Check__c/Background_Check__c.object-meta.xml
<CustomObject>
    <label>Background Check</label>
    <nameField>
        <displayFormat>BCN-{00000}</displayFormat>
        <label>Background Check  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>