brain/sources/prod-metadata/objects/Background_Check__c/fields/ACH_Authorization_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>ACH_Authorization_Signed_Date__c</fullName>
    <formula>IF(
ISPICKVAL(ACH_Authorization_Status__c, &quot;Signed&quot;),
TODAY(),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACH Authorization Signed Date</label>
    <type>Date</type>
</CustomField>