brain/sources/prod-metadata/objects/Background_Check__c/fields/ACH_Authorization_Status__c.field-meta.xml
<CustomField>
    <fullName>ACH_Authorization_Status__c</fullName>
    <label>ACH Authorization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>