brain/sources/prod-metadata/objects/Background_Check__c/fields/Assigned_to_QA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept this record from Queue</label>
    <type>Checkbox</type>
</CustomField>