brain/sources/prod-metadata/objects/Background_Check__c/fields/Background_Check_Project_Count__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Project_Count__c</fullName>
    <label>Background Check Project Count</label>
    <summaryForeignKey>Background_Check_Employment__c.Background_Check__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>