brain/sources/prod-metadata/objects/Background_Check__c/fields/Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status__c</fullName>
    <label>Background Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Verification Pending</fullName>
            </value>
            <value>
                <fullName>Documents Pending</fullName>
            </value>
            <value>
                <fullName>Candidate Details Pending</fullName>
            </value>
            <value>
                <fullName>Verification In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>