brain/sources/prod-metadata/objects/Background_Check__c/fields/Background_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Type__c</fullName>
    <label>Verification Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Verification</fullName>
            </value>
            <value>
                <fullName>I9 Verification</fullName>
            </value>
            <value>
                <fullName>Visa Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>