brain/sources/prod-metadata/objects/Background_Check__c/fields/Before_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Before_Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Background Check</label>
    <type>Checkbox</type>
</CustomField>