brain/sources/prod-metadata/objects/Background_Check__c/fields/C2C_Submission__c.field-meta.xml
<CustomField>
    <fullName>C2C_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C2C Submission</label>
    <type>Checkbox</type>
</CustomField>