brain/sources/prod-metadata/objects/Background_Check__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Background Checks</relationshipLabel>
    <relationshipName>Background_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>