brain/sources/prod-metadata/objects/Background_Check__c/fields/Candidate_Details_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Details_Status__c</fullName>
    <label>Candidate Details Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>