brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>DS_Debit_Amount__c</fullName>
    <label>DS Debit Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>