brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Debit_Amount_Formate__c.field-meta.xml
<CustomField>
    <fullName>DS_Debit_Amount_Formate__c</fullName>
    <formula>&quot;$&quot; &amp;
IF(FLOOR(DS_Debit_Amount__c) &gt;= 1000000,
    TEXT(FLOOR(DS_Debit_Amount__c/1000000)) &amp; &quot;,&quot; &amp;
    RIGHT(&quot;000&quot; &amp; TEXT(MOD(FLOOR(DS_Debit_Amount__c/1000),1000)),3) &amp; &quot;,&quot; &amp;
    RIGHT(&quot;000&quot; &amp; TEXT(MOD(FLOOR(DS_Debit_Amount__c),1000)),3),
    IF(FLOOR(DS_Debit_Amount__c) &gt;= 1000,
        TEXT(FLOOR(DS_Debit_Amount__c/1000)) &amp; &quot;,&quot; &amp;
        RIGHT(&quot;000&quot; &amp; TEXT(MOD(FLOOR(DS_Debit_Amount__c),1000)),3),
        TEXT(FLOOR(DS_Debit_Amount__c))
    )
) &amp; &quot;.&quot; &amp;
RIGHT(&quot;00&quot; &amp; TEXT(ROUND(MOD(DS_Debit_Amount__c,1)*100,0)),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Debit Amount Formate</label>
    <type>Text</type>
</CustomField>