brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Final_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Final_Payment_Due_Date__c</fullName>
    <label>DS Final Payment Due Date</label>
    <type>Date</type>
</CustomField>