brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Final_Payment_Due_Date_Formate__c.field-meta.xml
<CustomField>
    <fullName>DS_Final_Payment_Due_Date_Formate__c</fullName>
    <formula>RIGHT(&quot;0&quot;&amp;TEXT(MONTH(DS_Final_Payment_Due_Date__c)),2)&amp;&quot;/&quot;&amp;
RIGHT(&quot;0&quot;&amp;TEXT(DAY(DS_Final_Payment_Due_Date__c)),2)&amp;&quot;/&quot;&amp;
TEXT(YEAR(DS_Final_Payment_Due_Date__c))</formula>
    <label>DS Final Payment Due Date Formate</label>
    <type>Text</type>
</CustomField>