brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_First_Installment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_First_Installment_Due_Date__c</fullName>
    <label>DS First Installment Due Date</label>
    <type>Date</type>
</CustomField>