brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_First_Installment_Due_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>DS_First_Installment_Due_Date_Formatted__c</fullName>
    <formula>RIGHT(&quot;0&quot;&amp;TEXT(MONTH(DS_First_Installment_Due_Date__c)),2)&amp;&quot;/&quot;&amp;
RIGHT(&quot;0&quot;&amp;TEXT(DAY(DS_First_Installment_Due_Date__c)),2)&amp;&quot;/&quot;&amp;
TEXT(YEAR(DS_First_Installment_Due_Date__c))</formula>
    <label>DS First Installment Due Date Formatted</label>
    <type>Text</type>
</CustomField>