brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Payment_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Payment_Commencement_Date__c</fullName>
    <label>DS Payment Commencement Date</label>
    <type>Date</type>
</CustomField>