brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Payment_Commencement_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>DS_Payment_Commencement_Date_Formatted__c</fullName>
    <formula>RIGHT(&quot;0&quot;&amp;TEXT(MONTH(DS_Payment_Commencement_Date__c)),2)&amp;&quot;/&quot;&amp;
RIGHT(&quot;0&quot;&amp;TEXT(DAY(DS_Payment_Commencement_Date__c)),2)&amp;&quot;/&quot;&amp;
TEXT(YEAR(DS_Payment_Commencement_Date__c))</formula>
    <label>DS Payment Commencement Date Formatted</label>
    <type>Text</type>
</CustomField>