brain/sources/prod-metadata/objects/Background_Check__c/fields/DS_Total_Amount_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>DS_Total_Amount_to_be_Paid__c</fullName>
    <label>DS Total Amount to be Paid</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>