brain/sources/prod-metadata/objects/Background_Check__c/fields/Final_Employer_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Employer_Confirmation_Date__c</fullName>
    <formula>IF(
  Final_Employer_Confirmation_Received__c,
  TODAY(),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Employer Confirmation  Date</label>
    <type>Date</type>
</CustomField>