brain/sources/prod-metadata/objects/Background_Check__c/fields/Final_Employer_Confirmation_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Employer_Confirmation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Employer Confirmation Received</label>
    <type>Checkbox</type>
</CustomField>