brain/sources/prod-metadata/objects/Background_Check__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Background Checks</relationshipLabel>
    <relationshipName>Background_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>