brain/sources/prod-metadata/objects/Background_Check__c/fields/Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Interview_Round__c</fullName>
    <label>Interview Round</label>
    <length>100</length>
    <type>Text</type>
</CustomField>