brain/sources/prod-metadata/objects/Background_Check__c/fields/Last_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Sent__c</fullName>
    <label>Last Notification Sent</label>
    <type>DateTime</type>
</CustomField>