brain/sources/prod-metadata/objects/Background_Check__c/fields/Notification_Active__c.field-meta.xml
<CustomField>
    <fullName>Notification_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Active</label>
    <type>Checkbox</type>
</CustomField>