brain/sources/prod-metadata/objects/Background_Check__c/fields/Offer_Letter_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Payment_Received_Date__c</fullName>
    <formula>IF(
  ISPICKVAL(Offer_Letter_Payment_Status__c, &quot;Received&quot;),
  TODAY(),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Letter Payment Received Date</label>
    <type>Date</type>
</CustomField>