brain/sources/prod-metadata/objects/Background_Check__c/fields/Offer_Letter_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Payment_Status__c</fullName>
    <label>Offer Letter Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>