brain/sources/prod-metadata/objects/Background_Check__c/fields/Pending_Items_Summary__c.field-meta.xml
<CustomField>
    <fullName>Pending_Items_Summary__c</fullName>
    <label>Pending Items Summary</label>
    <type>TextArea</type>
</CustomField>