brain/sources/prod-metadata/objects/Background_Check__c/fields/Promissory_Note_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Promissory_Note_Signed_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Promissory_Note_Status__c, &quot;Signed&quot;),
TODAY(),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promissory Note Signed Date</label>
    <type>Date</type>
</CustomField>