brain/sources/prod-metadata/objects/Background_Check__c/fields/Promissory_Note_Status__c.field-meta.xml
<CustomField>
    <fullName>Promissory_Note_Status__c</fullName>
    <label>Promissory Note Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>