brain/sources/prod-metadata/objects/Background_Check__c/fields/Reference_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reference_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Check Completed</label>
    <type>Checkbox</type>
</CustomField>