brain/sources/prod-metadata/objects/Background_Check__c/fields/Send_Pending_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Send_Pending_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Background Notifications</label>
    <type>Checkbox</type>
</CustomField>