brain/sources/prod-metadata/objects/Background_Check__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Background Checks</relationshipLabel>
    <relationshipName>Background_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>