brain/sources/prod-metadata/objects/Background_Check__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
                <default>true</default>
                <label>Offer Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>