brain/sources/prod-metadata/objects/Background_Check__c/fields/Stage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detail__c</fullName>
    <formula>IF(
  ISPICKVAL(Stage__c, &quot;Reference Check&quot;),
  &quot;Round: &quot; &amp; Interview_Round__c,
  &quot;Offer Letter: &quot; &amp; TEXT(Offer_Letter_Payment_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Detail</label>
    <type>Text</type>
</CustomField>