brain/sources/prod-metadata/objects/Background_Check__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>Candidate__r.FirstName &amp; &quot; &quot; &amp; Candidate__r.LastName &amp; &quot; - &quot; &amp; TEXT(Stage__c) &amp; &quot; - &quot; &amp; Interview__r.company_new__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>