brain/sources/prod-metadata/objects/Background_Check__c/validationRules/Require_Documents_For_Candidate_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Documents_For_Candidate_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( Before_Background_Check__c ),
    NOT( C2C_Submission__c ),
    ISCHANGED( Background_Check_Status__c ),
    ISPICKVAL( Background_Check_Status__c , &quot;Candidate Details Pending&quot;),
    OR(
        NOT(ISPICKVAL( ACH_Authorization_Status__c , &quot;Signed&quot;)),
        NOT(ISPICKVAL( Promissory_Note_Status__c , &quot;Signed&quot;))
    )
)</errorConditionFormula>
    <errorDisplayField>Background_Check_Status__c</errorDisplayField>
    <errorMessage>ACH Authorization and Promissory Note must both be Signed before moving to Candidate Details Pending.</errorMessage>
</ValidationRule>