brain/sources/prod-metadata/objects/Background_Check__c/validationRules/Require_Payment_For_Documents_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Payment_For_Documents_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( Before_Background_Check__c ),
    NOT( C2C_Submission__c ),
    ISCHANGED( Background_Check_Status__c ),
    ISPICKVAL( Background_Check_Status__c , &quot;Verification In Progress&quot;),
    NOT(ISPICKVAL(Candidate_Details_Status__c, &quot;Submitted&quot;))
)</errorConditionFormula>
    <errorDisplayField>Background_Check_Status__c</errorDisplayField>
    <errorMessage>Offer Letter Payment Status must be Received before moving to Documents Pending.</errorMessage>
</ValidationRule>